# productsense

./: .dockerignore  .env.example  .gitignore  BRAINSTORM_NOTES.md  Dockerfile  HANDOFF.md  HANDOVER_FIXES.md  HANDOVER_PROMPT.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SESSION_HANDOFF.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: README.md  _dbg.py  inspect_state.py  main.py  pyproject.toml  requirements.txt
apps/api/app/: config.py  db.py  mcp_remote.py  middleware.py
apps/api/app/deepagent/: __init__.py  checkpoint.py  context_pack.py  contracts.py  coordinator.py  depgraph.py  domain_tools.py  models.py  research_tools.py  session.py  specialist_prompts.py  specialists.py  tools.py
apps/api/app/routes/: artifacts.py  assets.py  health.py  integrations.py  maya.py  mcp_proxy.py  projects.py
apps/api/app/services/: __init__.py  agent_runs_store.py  artifacts.py  assets.py  auth.py  checkpointer.py  discovery_artifacts.py  firecrawl.py  gemini.py  github_client.py  maya_clarify.py  mcp_keys.py  messages.py  projects.py  prompts.py
apps/api/scripts/results/: 20260516-221342-04_marketplace_landing.json  ANALYSIS.md  (+7 more)
apps/api/tests/: conftest.py  cost_compare.py  cost_compare_AFTER-flash.json  cost_compare_BEFORE-pro-preview.json  e2e_phase5_frontend.py  smoke_phase1.py  smoke_phase1_postgres.py  smoke_phase2.py  smoke_phase3.py  smoke_phase4.py  smoke_phase5_bridge.py  test_asset_ingestors.py  test_assets_service.py  test_dummy_coding_agent.py  test_github_client.py  test_smoke_live.py
apps/mcp/: README.md  pyproject.toml  server.py
(+97 files in other folders)
