[project]
name = "productsense-api"
version = "0.0.1"
description = "ProductSense FastAPI backend — Maya orchestrator + sub-agents"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "supabase>=2.9.0",
  "google-genai>=0.3.0",
  "google-cloud-aiplatform>=1.71.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.12",
  "sse-starlette>=2.1.3",
  "pyjwt[crypto]>=2.9.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-vertexai>=2.0.0",
  "pypdf>=5.0.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
