[project]
name = "productsense-mcp"
version = "0.0.1"
description = "ProductSense MCP server — coding agent integration surface"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "supabase>=2.9.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]
